comments django removed

--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
 
     <section class="section-padding bg-white">
         <div class="section-title text-center mb-5">
-            <h2>Trusted Agents</h2>
+            <h2>Agents de confiance</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
         <div class="container">
