--- a/agent-profile.html
+++ b/agent-profile.html
@@ -161,7 +161,7 @@
                         purus suscipit quis. Etiam euismod ornare elementum. </p>
                     <div class="row mt-3">
                         <div class="col-lg-6 col-md-6">
-                            <p><strong class="text-dark">Phone :</strong> +91 12345-67890</p>
+                            <p><strong class="text-dark">Téléphone :</strong> +91 12345-67890</p>
                             <p><strong class="text-dark">Address :</strong> 1200 Petersham Town</p>
                             <p><strong class="text-dark">State :</strong> Newcastle</p>
                         </div>
@@ -279,7 +279,7 @@
                         </div>
                         <div class="control-group form-group col-lg-4 col-md-4">
                             <div class="controls">
-                                <label>Phone Number <span class="text-danger">*</span></label>
+                                <label>Téléphone Number <span class="text-danger">*</span></label>
                                 <input type="email" class="form-control" required>
                             </div>
                         </div>
