--- a/contact.html
+++ b/contact.html
@@ -135,10 +135,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<h1 class="mt-0 mb-3 text-white">Contact Us</h1>
+					<h1 class="mt-0 mb-3 text-white">Contactez-nous</h1>
 					<div class="breadcrumbs">
-						<p class="mb-0 text-white"><a class="text-white" href="#">Home</a>  /  <span
-								class="text-success">Contact Us</span></p>
+						<p class="mb-0 text-white"><a class="text-white" href="#">Accueil</a>  /  <span
+								class="text-success">Contactez-nous</span></p>
 					</div>
 				</div>
 			</div>
@@ -150,10 +150,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4 col-md-4">
-					<h3 class="mt-1 mb-5">Get In Touch</h3>
-					<h6 class="text-dark"><i class="mdi mdi-home-map-marker"></i> Address :</h6>
+					<h3 class="mt-1 mb-5">Prendre contact</h3>
+					<h6 class="text-dark"><i class="mdi mdi-home-map-marker"></i> Adresse :</h6>
 					<p>86 Petersham town, New South wales Waedll Steet, Australia PA 6550</p>
-					<h6 class="text-dark"><i class="mdi mdi-phone"></i> Phone :</h6>
+					<h6 class="text-dark"><i class="mdi mdi-phone"></i> Téléphone :</h6>
 					<p>+91 12345-67890, (+91) 123 456 7890</p>
 					<h6 class="text-dark"><i class="mdi mdi-deskphone"></i> Mobile :</h6>
 					<p>(+20) 220 145 6589, +91 12345-67890</p>
@@ -162,9 +162,9 @@
 							data-cfemail="224b434f4d51434a434c62454f434b4e0c414d4f">[email&#160;protected]</a>, <a
 							href="https://askbootstrap.com/cdn-cgi/l/email-protection" class="__cf_email__"
 							data-cfemail="71181f171e31161c10181d5f121e1c">[email&#160;protected]</a></p>
-					<h6 class="text-dark"><i class="mdi mdi-link"></i> Website :</h6>
-					<p>www.askbootstrap.com</p>
-					<div class="footer-social"><span>Follow : </span>
+					<h6 class="text-dark"><i class="mdi mdi-link"></i> Site :</h6>
+					<p>www.airdseaimmo.com</p>
+					<div class="footer-social"><span>Suivez : </span>
 						<a href="#"><i class="mdi mdi-facebook"></i></a>
 						<a href="#"><i class="mdi mdi-twitter"></i></a>
 						<a href="#"><i class="mdi mdi-instagram"></i></a>
@@ -193,19 +193,19 @@
 					<div class="row">
 						<div class="control-group form-group col-lg-4 col-md-4">
 							<div class="controls">
-								<label>Your Name <span class="text-danger">*</span></label>
+								<label>Votre Nom <span class="text-danger">*</span></label>
 								<input type="text" class="form-control" required>
 							</div>
 						</div>
 						<div class="control-group form-group col-lg-4 col-md-4">
 							<div class="controls">
-								<label>Email Address <span class="text-danger">*</span></label>
+								<label>Adresse Email <span class="text-danger">*</span></label>
 								<input type="email" class="form-control" required>
 							</div>
 						</div>
 						<div class="control-group form-group col-lg-4 col-md-4">
 							<div class="controls">
-								<label>Phone Number <span class="text-danger">*</span></label>
+								<label>Numéro de téléphone <span class="text-danger">*</span></label>
 								<input type="email" class="form-control" required>
 							</div>
 						</div>
@@ -216,7 +216,7 @@
 							<textDimension rows="10" cols="100" class="form-control"></textDimension>
 						</div>
 					</div>
-					<button type="submit" class="btn btn-success">Send Message</button>
+					<button type="submit" class="btn btn-success">Envoyer le message</button>
 				</form>
 			</div>
 		</div>
