--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
   <section class="section-padding bg-white">
     <div class="section-title text-center mb-5">
-      <h2>Property By City</h2>
+      <h2>Propriété par ville</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
     </div>
     <div class="container">
@@ -442,9 +442,9 @@
   </section>
 
 
-  {% comment %} <section class="section-padding">
+  <!-- <section class="section-padding">
     <div class="section-title text-center mb-5">
-      <h2>Trusted Agents</h2>
+      <h2>Agents de confiance</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
     </div>
     <div class="container">
@@ -538,7 +538,7 @@
         </div>
       </div>
     </div>
-  </section> {% endcomment %}
+  </section> -->
 
 
   <section class="section-padding bg-dark text-center">
