--- a/index1.html
+++ b/index1.html
@@ -394,7 +394,7 @@
 
     <section class="section-padding bg-white">
         <div class="section-title text-center mb-5">
-            <h2>Property By City</h2>
+            <h2>Propriété par ville</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
         <div class="container">
@@ -451,9 +451,9 @@
     </section>
 
 
-    <section class="section-padding">
+    <!-- <section class="section-padding">
         <div class="section-title text-center mb-5">
-            <h2>Trusted Agents</h2>
+            <h2>Agents de confiance</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
         <div class="container">
@@ -547,7 +547,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
   
       <section class="section-padding bg-dark text-center">
