--- a/index2.html
+++ b/index2.html
@@ -414,7 +414,7 @@
 
 	<section class="section-padding bg-white">
 		<div class="section-title text-center mb-5">
-			<h2>Property By City</h2>
+			<h2>Propriété par ville</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 		</div>
 		<div class="container">
@@ -471,9 +471,9 @@
 	</section>
 
 
-	<section class="section-padding">
+	<!-- <section class="section-padding">
 		<div class="section-title text-center mb-5">
-			<h2>Trusted Agents</h2>
+			<h2>Agents de confiance</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 		</div>
 		<div class="container">
@@ -567,7 +567,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 
