--- a/property-single-slider.html
+++ b/property-single-slider.html
@@ -497,8 +497,8 @@
 								</div>
 								<div class="control-group form-group">
 									<div class="controls">
-										<label>Phone <span class="text-danger">*</span></label>
-										<input type="text" placeholder="Enter Phone Number" class="form-control"
+										<label>Téléphone <span class="text-danger">*</span></label>
+										<input type="text" placeholder="Entrer un numéro de téléphone Number" class="form-control"
 											required>
 									</div>
 								</div>
