--- a/agents.html
+++ b/agents.html
@@ -149,7 +149,7 @@
 
     <section class="section-padding">
         <div class="section-title text-center mb-5">
-            <h2>Trusted Agents</h2>
+            <h2>Agents de confiance</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
         <div class="container">
