--- a/properties-list.html
+++ b/properties-list.html
@@ -332,7 +332,7 @@
                     </div>
                     <div class="card sidebar-card">
                         <div class="card-body">
-                            <h5 class="card-title mb-3">Property By City</h5>
+                            <h5 class="card-title mb-3">Propriété par ville</h5>
                             <ul class="sidebar-card-list">
                                 <li><a href="#"><i class="mdi mdi-chevron-right"></i> New York <span
                                             class="sidebar-badge">220</span></a></li>
