--- a/register.html
+++ b/register.html
@@ -137,41 +137,41 @@
                 <div class="col-lg-5 col-md-5 mx-auto">
                     <div class="card padding-card">
                         <div class="card-body">
-                            <h5 class="card-title mb-4">Register</h5>
+                            <h5 class="card-title mb-4">Créer un compte</h5>
                             <form>
                                 <div class="form-group">
-                                    <label>Full Name <span class="text-danger">*</span></label>
+                                    <label>Nom Complet <span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" placeholder="Enter Full Name">
                                 </div>
                                 <div class="form-group">
-                                    <label>Mobile Number <span class="text-danger">*</span></label>
+                                    <label>Numéro de téléphone <span class="text-danger">*</span></label>
                                     <input type="text" class="form-control" placeholder="Enter Mobile Number">
                                 </div>
                                 <div class="form-group">
-                                    <label>Email Address <span class="text-danger">*</span></label>
+                                    <label>Adresse Email <span class="text-danger">*</span></label>
                                     <input type="email" class="form-control" placeholder="Enter Email Address">
                                 </div>
                                 <div class="form-group">
-                                    <label>Password <span class="text-danger">*</span></label>
+                                    <label>Mot de passe <span class="text-danger">*</span></label>
                                     <input type="email" class="form-control" placeholder="Enter Password">
                                 </div>
                                 <div class="form-group">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input"
                                             id="customControlAutosizing">
-                                        <label class="custom-control-label" for="customControlAutosizing">I agree with
-                                            all <a href="terms.html">Terms & Conditions</a></label>
+                                        <label class="custom-control-label" for="customControlAutosizing">Je suis d'accord avec
+                                            toutes les <a href="terms.html">conditions & d'utilisations</a></label>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-success btn-block">REGISTER</button>
+                                <button type="submit" class="btn btn-success btn-block">Créez le compte</button>
                             </form>
                             <div class="mt-4 text-center login-with-social">
                                 <button type="button" class="btn btn-facebook btn-block"><i
-                                        class="mdi mdi-facebook"></i> Login With Facebook</button>
+                                        class="mdi mdi-facebook"></i> Création de compte avec Facebook</button>
                                 <button type="button" class="btn btn-twitter btn-block"><i class="mdi mdi-twitter"></i>
-                                    Login With Twitter</button>
+                                    Création de compte avec Twitter</button>
                                 <button type="button" class="btn btn-google btn-block"><i
-                                        class="mdi mdi-google-plus"></i> Login With Google</button>
+                                        class="mdi mdi-google-plus"></i> Création de compte Google</button>
                             </div>
                         </div>
                     </div>
