--- a/user-profile.html
+++ b/user-profile.html
@@ -193,8 +193,8 @@
                                     <input type="email" class="form-control" placeholder="Enter Email Address">
                                 </div>
                                 <div class="form-group">
-                                    <label>Phone <span class="text-danger">*</span></label>
-                                    <input type="text" class="form-control" placeholder="Enter Phone">
+                                    <label>Téléphone <span class="text-danger">*</span></label>
+                                    <input type="text" class="form-control" placeholder="Entrer un numéro de téléphone">
                                 </div>
                                 <div class="form-group">
                                     <label>Emplacement <span class="text-danger">*</span></label>
